force-app/main/default/objects/Log__c/fields/ActionType__c.field-meta.xml
<CustomField>
    <fullName>ActionType__c</fullName>
    <description>The identifier of the webservice that generated the integration log</description>
    <label>Action Type</label>
    <length>30</length>
    <type>Text</type>
</CustomField>