force-app/main/default/objects/Log__c/fields/LastAttemptTime__c.field-meta.xml
<CustomField>
    <fullName>LastAttemptTime__c</fullName>
    <description>The date time of the last retry made on that integration log</description>
    <label>Last Attempt Time</label>
    <type>DateTime</type>
</CustomField>