force-app/main/default/objects/Log__c/fields/LogCode__c.field-meta.xml
<CustomField>
    <fullName>LogCode__c</fullName>
    <description>The code of the log in that specific apex class</description>
    <label>Log Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>