force-app/main/default/objects/Log__c/fields/Resubmit__c.field-meta.xml
<CustomField>
    <fullName>Resubmit__c</fullName>
    <defaultValue>false</defaultValue>
    <description>True if the integration log need to be retried</description>
    <label>Resubmit</label>
    <type>Checkbox</type>
</CustomField>