force-app/main/default/objects/Log__c/fields/RetryAttempts__c.field-meta.xml
<CustomField>
    <fullName>RetryAttempts__c</fullName>
    <description>The number of the retry attempts made on that integration log</description>
    <label>Retry Attempts</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>