force-app/main/default/objects/Log__c/recordTypes/Custom.recordType-meta.xml
<RecordType>
    <fullName>Custom</fullName>
    <active>true</active>
    <description>Custom record type for Log object</description>
    <label>Custom</label>
</RecordType>